--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,20 +1,27 @@
 Things needed for rails template
 
-x 1. Gems
-x 2. Landing Page & Bootstrap Template
-x 3. Dashboard and Boostrap Template
-x 3. CSS file for custom styles shared between landing and dashboard. Custom styles for each also
-x 4. User Login system
-x 5. Authentication system
-x 6. Haml and SCSS
-x 7. Model Validation Error partial
-x 8. Deal with Registration Header being used in weird places
-x 9. Google analytics
-x 10. Font Awesome
-x 11. Rspec
-x 12. Cucumber and Capybara
-x 13. Factories
-x 14. Set up Mailer, CSS injection, mailcatching in development
-x 15. Fixture builder
+v1
+x Gems
+x Landing Page & Bootstrap Template
+x Dashboard and Boostrap Template
+x CSS file for custom styles shared between landing and dashboard. Custom styles for each also
+x User Login system
+x Authentication system
+x Haml and SCSS
+x Model Validation Error partial
+x Deal with Registration Header being used in weird places
+x Google analytics
+x Font Awesome
+x Rspec
+x Cucumber and Capybara
+x Factories
+x Set up Mailer, CSS injection, mailcatching in development
+x Fixture builder
 
 
+v2
+Breadcrumbs
+Password Reset
+Edit Account
+Make other user admin
+Create a constant for App/Company name
