--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,28 +1,28 @@
 ---
 volta:
-  id: 1
+  id: 7
   first_name: Alessandro
   last_name: Volta
   email: avolta@gmail.com
-  password_digest: "$2a$04$.vTkWJZ5QuYlKE8h2OHvf.EcnsItl8pLxwmfu40WB1aWycBmpwIby"
+  password_digest: "$2a$04$mb2VZ9BZK5/1.S0OzEc4seqOwDfPbzguV7mrpSeI/laYl01iQhx/O"
   admin: 
-  created_at: 2015-07-09 04:19:01.338930000 Z
-  updated_at: 2015-07-09 04:19:01.338930000 Z
+  created_at: 2015-07-10 02:29:02.198834000 Z
+  updated_at: 2015-07-10 02:29:02.198834000 Z
 ampere:
-  id: 2
+  id: 8
   first_name: Andre
   last_name: Ampere
   email: aampere@gmail.com
-  password_digest: "$2a$04$3rHd32GuXA5dBtiuxw/p1eJUgqThmKa5eHqSTnpo/ndZvwAlPs7KC"
+  password_digest: "$2a$04$bg0xu8/0fBj/gyhetUCHJePEe7IbiZe1KftOsXMVV.rmwQKgU6sHC"
   admin: 
-  created_at: 2015-07-09 04:19:01.353984000 Z
-  updated_at: 2015-07-09 04:19:01.353984000 Z
+  created_at: 2015-07-10 02:29:02.215604000 Z
+  updated_at: 2015-07-10 02:29:02.215604000 Z
 ohm:
-  id: 3
+  id: 9
   first_name: Georg
   last_name: Ohm
   email: gohm@gmail.com
-  password_digest: "$2a$04$bLoivwqf7H2P3hrd9OdPoOe7UoPJpR0gADIa.7vVc5zN9bm4F0hIi"
+  password_digest: "$2a$04$KMadrN5nAhAJB2bFHTkgt.Ao2Wq03s4eoVR7v3yU7on8yAA2Co62u"
   admin: 
-  created_at: 2015-07-09 04:19:01.359659000 Z
-  updated_at: 2015-07-09 04:19:01.359659000 Z
+  created_at: 2015-07-10 02:29:02.220960000 Z
+  updated_at: 2015-07-10 02:29:02.220960000 Z
