--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,28 +1,28 @@
 ---
 volta:
-  id: 4
+  id: 1
   first_name: Alessandro
   last_name: Volta
   email: avolta@gmail.com
-  password_digest: "$2a$04$NYegj9p6DY.rs7d/CRQUdeSSZyod.QTo1JEQHrxZCFesQis8gVjki"
+  password_digest: "$2a$04$oSRS3IuTwywH2UxMkG1Y.Oke0sEmgpHrxx/wCI56e5NJ9kJxSn3Lm"
   admin: 
-  created_at: 2015-07-10 03:12:09.562902000 Z
-  updated_at: 2015-07-10 03:12:09.562902000 Z
+  created_at: 2015-09-13 19:08:20.335490000 Z
+  updated_at: 2015-09-13 19:08:20.335490000 Z
 ampere:
-  id: 5
+  id: 2
   first_name: Andre
   last_name: Ampere
   email: aampere@gmail.com
-  password_digest: "$2a$04$hnm5M3h8NjuO5ZQF1jkaeuxaUJFeW2jdRFGeHcMJ4QFynug0A6HTG"
+  password_digest: "$2a$04$H3TYa7lC5pToAUvFBDOqvOJZm2DEdEIbKe553L8Vk.7sMXJRzs0ae"
   admin: 
-  created_at: 2015-07-10 03:12:09.577279000 Z
-  updated_at: 2015-07-10 03:12:09.577279000 Z
+  created_at: 2015-09-13 19:08:20.343539000 Z
+  updated_at: 2015-09-13 19:08:20.343539000 Z
 ohm:
-  id: 6
+  id: 3
   first_name: Georg
   last_name: Ohm
   email: gohm@gmail.com
-  password_digest: "$2a$04$Va0WLa9rCDwhutrcIPEji.ansbI4WVor4uaWsjT9wPBUqD5B0umeO"
+  password_digest: "$2a$04$sWBqUX8ykdYDWT5TXH0vxOTTAWZ1T2S9V4hnWmAGX9ck/e0BrDuRK"
   admin: 
-  created_at: 2015-07-10 03:12:09.583480000 Z
-  updated_at: 2015-07-10 03:12:09.583480000 Z
+  created_at: 2015-09-13 19:08:20.349766000 Z
+  updated_at: 2015-09-13 19:08:20.349766000 Z
